--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
-  angular-front-end:
-    build: ./front-end
-    container_name: angular-front-end
-    ports:
-      - '80:80'
-    expose:
-      - '80'
+#  scrum-front-end:
+#    build: ./front-end
+#    container_name: scrum-front-end
+#    ports:
+#      - '80:80'
+#    expose:
+#      - '80'
   scrum-discovery-service:
     build: ./discovery-service
     container_name: scrum-discovery-service
@@ -33,6 +33,19 @@ services:
     depends_on:
       scrum-discovery-service:
         condition: service_healthy
+  scrum-gateway-service:
+    build: ./gateway-service
+    container_name: scrum-gateway-service
+    ports:
+      - '8888:8888'
+    expose:
+      - '8888'
+    environment:
+      - DISCOVERY_SERVICE_URL=http://scrum-discovery-service:8761/eureka
+      - CONFIG_SERVICE_URL=http://scrum-config-service:9999
+    depends_on:
+      scrum-config-service:
+        condition: service_healthy
   scrum-project-service:
     build: ./project-service
     container_name: scrum-project-service
@@ -48,7 +61,7 @@ services:
       - DISCOVERY_SERVICE_URL=http://scrum-discovery-service:8761/eureka
       - CONFIG_SERVICE_URL=http://scrum-config-service:9999
     depends_on:
-      scrum-config-service:
+      scrum-gateway-service:
         condition: service_healthy
   scrum-sprint-service:
     build: ./sprint-service
@@ -66,17 +79,4 @@ services:
       - CONFIG_SERVICE_URL=http://scrum-config-service:9999
     depends_on:
       scrum-project-service:
-        condition: service_healthy
-  scrum-gateway-service:
-    build: ./gateway-service
-    container_name: scrum-gateway-service
-    ports:
-      - '8888:8888'
-    expose:
-      - '8888'
-    environment:
-      - DISCOVERY_SERVICE_URL=http://scrum-discovery-service:8761/eureka
-      - CONFIG_SERVICE_URL=http://scrum-config-service:9999
-    depends_on:
-      scrum-config-service:
         condition: service_healthy
